--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
                 <div class="card-content">
                   <p class="card-subtitle">Web, Portfolio</p>
                   <h3 class="title h3">
-                    <a href="#" class="card-title"
+                    <a href="https://github.com/SanjayKumarKP/Portfolio/" class="card-title"
                       >Creative & Attractive Portfolio</a
                     >
                   </h3>
@@ -583,7 +583,7 @@
                 <div class="card-content">
                   <p class="card-subtitle">Web, Full Stack</p>
                   <h3 class="title h3">
-                    <a href="#" class="card-title"
+                    <a href="https://github.com/SanjayKumarKP/blackadam/" class="card-title"
                       >Full Stack Development & Management</a
                     >
                   </h3>
