--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       content="Experienced Developer Crafting Innovative Projects and Immersive Experiences"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://sanjaykumar.vercel.app/" />
+    <meta property="og:url" content="https://sanjaykumarkp.github.io/" />
     <meta property="og:site_name" content="Sanjay Kumar" />
     <meta property="og:image" content="assets/images/logo.svg" />
     <meta property="og:image:width" content="1280" />
@@ -42,10 +42,10 @@
     />
     <meta
       itemprop="image"
-      content="https://sanjaykumar.vercel.app/favicon.svg"
+      content="https://sanjaykumarkp.github.io/favicon.svg"
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:url" content="https://sanjaykumar.vercel.app/" />
+    <meta name="twitter:url" content="https://sanjaykumarkp.github.io/" />
     <meta name="twitter:site" content="@sanjaykumarkp" />
     <meta name="twitter:creator" content="@sanjaykumarkp" />
     <meta name="twitter:title" content="Sanjay Kumar | Developer" />
@@ -55,7 +55,7 @@
     />
     <meta
       name="twitter:image:src"
-      content="https://sanjaykumar.vercel.app/assets/images/logo.svg"
+      content="https://sanjaykumarkp.github.io/assets/images/logo.svg"
     />
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -118,7 +118,7 @@
             </li>
           </ul>
         </nav>
-        <a href="#" class="btn btn:hover">
+        <a href="https://sanjaykumarkp.github.io/assets/Sanjay_Kumar K P_Resume.pdf" class="btn btn:hover">
           <span class="span">Download CV</span>
           <ion-icon name="cloud-download-outline" aria-hidden="true"></ion-icon>
         </a>
@@ -169,7 +169,7 @@
                 A Developer Crafting Projects &#38; Experiences.
               </h1>
               <div class="wrapper">
-                <a href="#" class="btn btn:hover">
+                <a href="https://sanjaykumarkp.github.io/assets/Sanjay_Kumar K P_Resume.pdf" class="btn btn:hover">
                   <span class="span">Download CV</span>
                   <ion-icon
                     name="cloud-download-outline"
