--- a/index.html
+++ b/index.html
@@ -328,13 +328,10 @@
                     </figure>
                     <div class="about-content">
                       <h2 class="h4 title section-title">
-                        A very small stage in a vast cosmic.
+                        A tiny part in a huge universe.
                       </h2>
                       <p class="section-text">
-                        A very small stage in a vast cosmic arena great
-                        turbuslent clouds encyclo-paedia galactica star stuff
-                        harvesting star light the carbon in our apple pies realm
-                        of the galaxies
+                        A tiny part in a massive universe. Big stormy clouds encyclopedia of the Milky Way galaxy material collected from stars capturing light from stars the carbon in our apple pies space of the galaxies.
                       </p>
                       <ul class="about-list">
                         <li class="about-item">
@@ -343,7 +340,7 @@
                         </li>
                         <li class="about-item">
                           <p class="list-title">Phone Number</p>
-                          <span class="span title h5">(+91) 818-999-4656</span>
+                          <span class="span title h5">+91 81899 94656</span>
                         </li>
                         <li class="about-item">
                           <p class="list-title">Email Address</p>
@@ -540,7 +537,7 @@
                     alt="Project poster: Creative & Attractive Portfolio"
                     class="img-cover"
                   />
-                  <a href="#" class="btn btn:hover">
+                  <a href="https://github.com/SanjayKumarKP/Portfolio/" class="btn btn:hover">
                     <span class="span">Project Details</span>
                     <ion-icon
                       name="arrow-forward"
@@ -572,7 +569,7 @@
                     alt="Project poster: Full Stack Development & Management"
                     class="img-cover"
                   />
-                  <a href="#" class="btn btn:hover">
+                  <a href="https://github.com/SanjayKumarKP/blackadam/" class="btn btn:hover">
                     <span class="span">Project Details</span>
                     <ion-icon
                       name="arrow-forward"
@@ -600,7 +597,7 @@
           <div class="container">
             <div class="testi-content">
               <blockquote class="title h4 section-text">
-                &ldquo; Experience more and with learning, innovating creative
+                &ldquo; Expand your experiences through continuous learning, innovation, and creativity.
                 &rdquo;
               </blockquote>
               <div class="profile-card">
@@ -687,7 +684,7 @@
                     />
                   </div>
                   <div>
-                    <span class="title h6">(+91) 818-999-4656</span>
+                    <span class="title h6">+91 81899 94656</span>
                   </div>
                 </li>
                 <li class="contact-item">
