--- a/index.html
+++ b/index.html
@@ -351,17 +351,11 @@
                         <li class="about-item">
                           <p class="list-title">Social Network</p>
                           <div class="social-list">
-                            <a href="#" class="social-link h6" title="Facebook"
-                              >Fb.</a
-                            >
-                            <a href="#" class="social-link h6" title="Behance"
-                              >Be.</a
-                            >
-                            <a href="#" class="social-link h6" title="Linkedin"
+                            <a href="https://www.linkedin.com/in/sanjay-kumar-k-p/" class="social-link h6" title="Linkedin"
                               >Ln.</a
                             >
-                            <a href="#" class="social-link h6" title="Dribbble"
-                              >Dr.</a
+                            <a href="https://twitter.com/sanjaykumarkp" class="social-link h6" title="Twitter"
+                              >Tw.</a
                             >
                           </div>
                         </li>
