--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                       <ul class="about-list">
                         <li class="about-item">
                           <p class="list-title">Name</p>
-                          <span class="span title h5">Sanjay Kumar</span>
+                          <span class="span title h5">Sanjay Kumar K P</span>
                         </li>
                         <li class="about-item">
                           <p class="list-title">Phone Number</p>
